# aula06_bootcamp

./: .pre-commit-config.yaml  main.py  pyproject.toml
