[tool.poetry]
name = "aula06-bootcamp"
version = "0.1.0"
description = ""
authors = ["sandokhan <rhaydrick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^6.0.1"
taskipy = "^1.14.1"
click = "<8.1.0"
black = "^25.1.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = "isort main.py && black main.py && flake8 main.py"